gitops/vote-ui/vote-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-ui
  namespace: gitops-managed-project
  labels:
    app: vote-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-ui
  template:
    metadata:
      labels:
        app: vote-ui
    spec:
      containers:
        - name: vote-ui
          image: image-registry.openshift-image-registry.svc:5000/gitops-managed-project/pipelines-vote-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
