gitops/vote-ui/vote-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-ui
  namespace: gitops-managed-project
  labels:
    app: vote-ui
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    app: vote-ui
